# antlr_criteria

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
generators/: generate.py
generators/cpp/: build.gradle.kts
generators/grammar/: MyCriteria.g4  Test.g4
generators/java/: build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
projects/cpp/: CMakeLists.txt  build.gradle.kts
projects/cpp/lib/: antlr4-runtime.exp  antlr4-runtime.lib
projects/cpp/src/main/: CMakeLists.txt  MyCriteriaVisitorImpl.cpp  MyCriteriaVisitorImpl.h  lib.cpp  lib.h  typedefs.h
projects/cpp/src/main/com/exoline/mycriteria/: main.cpp
projects/cpp/src/test/: CMakeLists.txt  GrammarTest.cpp
projects/java/: build.gradle.kts
projects/java/src/main/kotlin/com/exoline/mycriteria/: Expr.kt  Interpreter.kt  Main.kt  ParserUtils.kt  TypeAliases.kt  Utils.kt
projects/java/src/main/kotlin/com/exoline/mycriteria/exception/: Blocked.kt  CompileErrorException.kt  InsufficientArgumentsException.kt  RecursiveImportException.kt  RuntimeErrorException.kt
projects/java/src/main/kotlin/com/exoline/mycriteria/functions/: Func.kt  FunctionResolver.kt  Functions.kt  LibraryLoader.kt  StdLibrary.kt
projects/java/src/main/kotlin/com/exoline/mycriteria/walk/: MyCriteriaVisitor.kt  PrettyVisitor.kt
projects/java/src/test/kotlin/com/exoline/mycriteria/: InterpreterTest.kt  Main.kt  TestStdLibrary.kt
tests/1/: app.txt
tests/16/: app.txt
tests/19/: app.txt  test.json
tests/20/: app.txt
tests/28/: app.txt  test.json
tests/29/: app.txt  test.json
tests/30/: app.txt
